--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -11,4 +11,4 @@ jobs:
             - uses: gautamkrishnar/blog-post-workflow@master
               with: 
                 max_post_count: "15"
-                feed_list: "https://plume.nogafam.es/@/Juanro49/atom.xml, http://feeds.feedburner.com/blog_Juanro49, https://fediverse.tv/feeds/videos.xml?accountId=17560&token=8be337e3-c267-4060-951e-1bbdebc90077, http://feeds.feedburner.com/fediversetv_juanro49, http://feeds.feedburner.com/instatecno"
+                feed_list: "http://feeds.feedburner.com/blog_Juanro49,http://feeds.feedburner.com/fediversetv_juanro49, http://feeds.feedburner.com/instatecno"
